# komodo

./: Cargo.toml  README.md  readme.md  todo.md
examples/: hello.s  keyboard.s  loop.s
resources/: resources.gresource.xml  style.css
src/: editor.rs  lib.rs  main.rs  panes.rs  registers.rs  status_flags.rs  test.rs
src/custom_button/: mod.rs
src/hover/provider/: imp.rs
tests/: test.rs
