[package]
name = "komodo"
version = "0.1.0"
edition = "2024"

[dependencies]
capstone = "0.13.0"
goblin = "0.10.1"
os_info = "3.12.0"
tempfile = "3.23.0"
adw = { version = "0.8.1", package = "libadwaita", features = ["v1_8"] }
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_20"] }
sourceview5 = "0.10.0"
console = "0.16.2"

[build-dependencies]
glib-build-tools = "0.21.0"
